--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,5 @@
     "name":"Trivia",
     "short_name":"Triv",
     "start_url":"https://brothermo1.github.io/trivia1/",
-    "description":"Skbibid toilet eye of rah"
+    "description":"Trivia Game"
  }
