--- a/manifest.json
+++ b/manifest.json
@@ -34,8 +34,8 @@
     "display":"standalone",
     "dir":"auto",
     "lang":"en-US",
-    "name":"Trivia",
-    "short_name":"Triv",
-    "start_url":"https://brothermo1.github.io/trivia1/",
+    "name":"Trivia Central",
+    "short_name":"Trivia",
+    "start_url":"brothermo1.github.io/trivia1/",
     "description":"Trivia Game"
  }
