--- a/manifest.json
+++ b/manifest.json
@@ -37,5 +37,6 @@
    "name":"Trivia Central",
    "short_name":"Trivia",
    "start_url":"brothermo1.github.io/trivia1/",
+   "scope": "/",
    "description":"Trivia Game"
 }
