--- a/manifest.json
+++ b/manifest.json
@@ -28,14 +28,14 @@
         "form_factor": "wide"
      }
         ],
-   "orientation":"any",
-   "display":"standalone",
-   "dir":"auto",
-   "lang":"en-US",
-   "name":"Trivia Central",
-   "short_name":"Trivia",
-   "start_url":"https://brothermo1.github.io/trivia1/",
-   "id": "https://brothermo1.github.io/trivia1/",
-   "scope": "/",
-   "description":"Trivia Game"
+        "orientation":"any",
+        "display":"standalone",
+        "dir":"auto",
+        "lang":"en-US",
+        "name":"Trivia Central",
+        "short_name":"Trivia",
+        "start_url":"https://brothermo1.github.io/trivia1/",
+        "scope":"/",
+        "id":"https://brothermo1.github.io/trivia1/",
+        "description":"Fun Exciting Trivia App"
 }
